deprecatedになってるやつ更新